[gd_scene load_steps=23 format=2]

[ext_resource path="res://World/Objects/OreObjectLarge.gd" type="Script" id=1]
[ext_resource path="res://Assets/ore_sets/cobblestone/cobblestone_gemstone_large.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/smoke/12.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/smoke/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/smoke/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/smoke/6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/smoke/10.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/smoke/7.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/smoke/5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/smoke/11.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/smoke/4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/smoke/3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/smoke/8.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/smoke/9.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.2031, 34.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.693, 19.1412 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BigOre:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallOre:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigHurtBox/bigHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BigMovementCollisionBox/BigMovementBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmallMovementCollisionBox/SmallMovementBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SmokeEffect:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SmokeEffect:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SmokeEffect:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "big_ore_break"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BigOre:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallOre:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmallMovementCollisionBox/SmallMovementBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BigMovementCollisionBox/BigMovementBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BigHurtBox/bigHurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "big_ore_hit_right"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("BigOre:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 3, -12 ), Vector2( -2, -12 ), Vector2( 1, -12 ), Vector2( -1, -12 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "small_ore_break"
tracks/0/type = "value"
tracks/0/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallOre:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmallMovementCollisionBox/SmallMovementBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmokeEffect:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmokeEffect:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmokeEffect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "small_ore_hit_right"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SmallOre:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 3, -12 ), Vector2( -2, -12 ), Vector2( 1, -12 ), Vector2( -1, -12 ), Vector2( 0, -12 ) ]
}

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[node name="OreObjectLarge" type="Node2D"]
scale = Vector2( 0.85, 0.85 )
script = ExtResource( 1 )

[node name="BigMovementCollisionBox" type="StaticBody2D" parent="."]
position = Vector2( -1, -28 )

[node name="BigMovementBox" type="CollisionShape2D" parent="BigMovementCollisionBox"]
position = Vector2( 2.625, 41 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="BigHurtBox" type="Area2D" parent="."]
position = Vector2( -1, -28 )
collision_layer = 16
collision_mask = 0

[node name="bigHurtBox" type="CollisionShape2D" parent="BigHurtBox"]
position = Vector2( 2.5, 40.7969 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="SmallMovementCollisionBox" type="StaticBody2D" parent="."]
position = Vector2( 0, -28 )

[node name="SmallMovementBox" type="CollisionShape2D" parent="SmallMovementCollisionBox"]
position = Vector2( -1, 45 )
shape = SubResource( 5 )
disabled = true

[node name="SmallHurtBox" type="Area2D" parent="."]
position = Vector2( 0, -28 )
collision_layer = 16
collision_mask = 0

[node name="smallHurtBox" type="CollisionShape2D" parent="SmallHurtBox"]
position = Vector2( -1, 45 )
shape = SubResource( 5 )
disabled = true

[node name="SmallOre" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )

[node name="BigOre" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/big_ore_break = SubResource( 3 )
anims/big_ore_hit_right = SubResource( 2 )
anims/small_ore_break = SubResource( 7 )
anims/small_ore_hit_right = SubResource( 6 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0

[node name="SmokeEffect" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.27451 )
position = Vector2( -1.17647, 2.35294 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 8 )

[connection signal="area_entered" from="BigHurtBox" to="." method="_on_BigHurtBox_area_entered"]
[connection signal="area_entered" from="SmallHurtBox" to="." method="_on_SmallHurtBox_area_entered"]
